<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="560dp"
    android:layout_height="250dp"
    android:background="@color/colorGrey100">
    <ImageView
        android:id="@+id/dtl_img_place"
        android:layout_width="@dimen/detail_image_48dp"
        android:layout_height="@dimen/detail_image_48dp"
        android:layout_margin="@dimen/view_margin_16dp"
        android:src="@drawable/ic_place_black_48dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/dtl_img_place"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/dtl_lnl_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/dtl_img_place"
            android:layout_marginTop="@dimen/view_margin_16dp"
            android:layout_toRightOf="@id/dtl_img_place"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dtl_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_txt_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/detail_text_size_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dtl_txt_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_txt_show"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/detail_text_size_18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dtl_btn_extra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTranslation"
                android:text="@string/detail_btn_extra"
                android:textColor="@color/colorIndigo100"
                android:textStyle="bold" />

            <VideoView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dtl_vdo_view"
                android:layout_marginBottom="@dimen/number16"
                android:layout_marginRight="@dimen/number48"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/dtl_btn_close"
        android:layout_width="@dimen/detail_image_48dp"
        android:layout_height="@dimen/detail_image_48dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/number6"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_close_black_48dp" />

</RelativeLayout>
