<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.maptran.EditedActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"/>
        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@color/colorGrey100"
                android:padding="@dimen/number8"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite">
                    <TextView
                        android:layout_marginRight="@dimen/number3"
                        android:layout_marginLeft="@dimen/number3"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_title"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_number15"/>
                    <EditText
                        android:layout_marginRight="@dimen/number3"
                        android:layout_marginLeft="@dimen/number3"
                        android:id="@+id/edt_name_edited"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/view8dp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite">
                    <TextView
                        android:layout_marginRight="@dimen/number3"
                        android:layout_marginLeft="@dimen/number3"
                        android:layout_marginTop="@dimen/number11"
                        android:layout_gravity="top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_title"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_number15"/>
                    <EditText
                        android:gravity="top|left"
                        android:hint="333"
                        android:layout_marginRight="@dimen/number3"
                        android:layout_marginLeft="@dimen/number3"
                        android:layout_gravity="bottom"
                        android:id="@+id/edt_detail_edited"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        android:lines="7"/>
                </LinearLayout>
                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/view8dp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite">
                    <ImageView
                        android:id="@+id/img_photo_edited"
                        android:layout_marginRight="@dimen/number3"
                        android:layout_marginLeft="@dimen/number3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"/>
                </LinearLayout>
                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/view8dp"/>
                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/view8dp"/>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <Button
                android:id="@+id/btn_edt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/save24"
                android:text="บันทึก"
                android:padding="@dimen/number8"

                android:background="@color/colorCyan800"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_edt_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="@dimen/number8"
                android:drawableTop="@drawable/image24"
                android:background="@color/colorAmber800"
                android:text="@string/app_add_image"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <Button
                android:padding="@dimen/number8"
                android:id="@+id/btn_edt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/close24"
                android:text="@string/app_cancel"
                android:background="@color/colorRed800"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
